--- a/web/Rails/app/views/admin/users/_user.html.erb
+++ b/web/Rails/app/views/admin/users/_user.html.erb
@@ -1,3 +1,5 @@
+<!-- рендерится в  index.html.erb -->
+
 <tr>
   <th scope="row"><%= user.id %></th>
   <td><%= user.name %></td>
@@ -20,3 +22,18 @@
       data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
   </td>
 </tr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--  -->
