--- a/web/Rails/app/views/comments/_comment.html.erb
+++ b/web/Rails/app/views/comments/_comment.html.erb
@@ -11,4 +11,10 @@
     class: 'btn btn-danger btn-sm', data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
   <!-- polymorphic_path([comment.commentable, comment] - хэлпер Рэилс для URL полиморфических ассоциаций, строит путь исходя из того что переданно в 1м элементе массива, тут comment.commentable тоесть комментируемая сущность, вопрос или ответ, а далее сущность коммента. Те путь будет либо '/questions/:qoestion_id/comments/:id' либо '/answers/:answer_id/comments/:id'  -->
 
+  <!-- Вариант той же кнопки со скрытием для пользователей бнз соотв доступа (UsersRoles) -->
+  <% if policy(comment).destroy? %>
+    <%= link_to t('global.button.delete'), polymorphic_path([comment.commentable, comment]),
+      class: 'btn btn-danger btn-sm', data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
+  <% end %>
+
 <% end %>
