--- a/web/Rails/app/views/comments/_commentable.html.erb
+++ b/web/Rails/app/views/comments/_commentable.html.erb
@@ -24,7 +24,7 @@
 
 
 
-<!--                             Законченый вариант с исправлением отображения вывода ошибок -->
+<!--                                 Вариант с исправлением отображения вывода ошибок -->
 
 <!-- Создадим локальную переменную для данного паршала, чтобы не дублировать код -->
 <% is_current_comment = comment&.for?(commentable) %> <!-- возвращает true или false -->
@@ -48,6 +48,37 @@
     <%= f.text_area :body, class: 'form-control form-control-sm' %>
 
     <%= f.submit t('global.button.submit'), class: 'btn btn-sm btn-primary' %>
+  <% end %>
+
+  <%= render commentable.comments.includes(:user).decorate %>
+<% end %>
+
+
+
+<!--                               Вариант сокрытием формы (UsersRoles) -->
+
+<% is_current_comment = comment&.for?(commentable) %>
+<!-- Создадим локальную переменную и для билдера URL в форме и заодно для проверки доступа, тк вернет сущность коммента -->
+<% comment_builder = is_current_comment ? comment : commentable.comments.build %>
+
+<%= link_to t('questions.show.comments'), "##{html_id}", class: 'btn btn-primary', data: {'bs-toggle': 'collapse'} %>
+
+<%= tag.div class: "collapse #{'show' if is_current_comment}", id: html_id do %>
+
+  <!-- Скрываем форму для пользователей бнз соотв доступа -->
+  <% if policy(comment_builder).create? %>
+
+    <%= form_with model: [commentable, comment_builder], class: 'pt-3 border-top my-2' do |f| %>
+      <% if is_current_comment %>
+        <%= render 'shared/errors', object: comment %>
+      <% end %>
+
+      <%= f.label :body %>
+      <%= f.text_area :body, class: 'form-control form-control-sm' %>
+
+      <%= f.submit t('global.button.submit'), class: 'btn btn-sm btn-primary' %>
+    <% end %>
+
   <% end %>
 
   <%= render commentable.comments.includes(:user).decorate %>
