--- a/web/Rails/app/views/questions/_question.html.erb
+++ b/web/Rails/app/views/questions/_question.html.erb
@@ -22,6 +22,16 @@
     <%= link_to t('global.button.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
     <%= link_to t('global.button.delete'), question_path(question), class: 'btn btn-danger',
       data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
+
+
+    <!-- Скроем кнопки редактирования и удаления пользователям которым не разрешены эти функции (UsersRoles) -->
+    <% if policy(question).edit? %>
+      <%= link_to t('global.button.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
+    <% end %>
+    <% if policy(question).destroy? %>
+      <%= link_to t('global.button.delete'), question_path(question), class: 'btn btn-danger',
+        data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
+    <% end %>
   </div>
 </article>
 
