--- a/web/Rails/app/views/answers/_answer.html.erb
+++ b/web/Rails/app/views/answers/_answer.html.erb
@@ -52,10 +52,18 @@
           </div>
         </section>
 
-        <%= link_to t('global.button.edit'), edit_question_answer_path(question, answer),
-          class: 'btn btn-info btn-sm' %>
+        <%= link_to t('global.button.edit'), edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
         <%= link_to t('global.button.delete'), question_answer_path(question, answer), class: 'btn btn-danger btn-sm',
           data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
+
+        <!-- Вариант тех же кнопок со скрытием для пользователей бнз соотв доступа (UsersRoles) -->
+        <% if policy(answer).edit? %>
+          <%= link_to t('global.button.edit'), edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
+        <% end %>
+        <% if policy(answer).destroy? %>
+          <%= link_to t('global.button.delete'), question_answer_path(question, answer), class: 'btn btn-danger btn-sm',
+            data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
+        <% end %>
       </div>
     </div>
   </div>
