--- a/web/Rails/app/views/shared/_menu.html.erb
+++ b/web/Rails/app/views/shared/_menu.html.erb
@@ -66,6 +66,12 @@
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><%= nav_tab t('menu.home'), root_path, class: 'nav-link px-2', current_page: current_page %></li>
           <li><%= nav_tab t('menu.questions'), questions_path, class: 'nav-link px-2', current_page: current_page %></li>
+
+          <!--  Пункт меню для админа доступный только админам (UsersRoles)  -->
+          <% if policy([:admin, :user]).index? %>
+            <!--  [:admin, :user] - при считывании политики добавляем и название нэймспэйса и название политики(тк никакого объекта нет)  -->
+            <li><%= nav_tab t('menu.users'), admin_users_path, class: 'nav-link px-2', current_page: current_page %></li>
+          <% end %>
         </ul>
 
         <!--  Собственно новый раздел(выпадающий список) переключения локалей  -->
