--- a/web/Rails/app/views/password_resets/edit.html.erb
+++ b/web/Rails/app/views/password_resets/edit.html.erb
@@ -6,7 +6,7 @@
 <%= render 'shared/errors', object: @user %> <!-- Обычный вывод ошибок для невалидного пароля -->
 
 <%= form_with model: @user, url: password_reset_path, method: :patch do |f| %>
-<!-- Тут не смотря на прописывание модели, прописываем URL и метод отдельно, тк если указать только модель, то эта форма будет отправлена на обработку в user-контроллер, но на нужен контроллер сброса пароля, потому и нужно указать URL и метод, чтоб отправилось на его экшен update -->
+<!-- Тут не смотря на прописывание модели, прописываем URL и метод отдельно, тк если указать только модель, то эта форма будет отправлена на обработку в user-контроллер, но нам нужен контроллер сброса пароля, потому и нужно указать URL и метод, чтоб отправилось на его экшен update -->
 
   <!-- Скрытые поля с токеном и имэйлом, для которых мы делаем сброс, это обязательно, тк метод контроллера set_user и перед экшеном update вызывает метод проверки токена из консерна, а иначе злоумышленник сможет подделать запрос update и поменять пароль любой учетной записи -->
   <%= f.hidden_field :password_reset_token, value: @user.password_reset_token %>
