--- a/web/Rails/app/views/password_reset_mailer/reset_email.text.erb
+++ b/web/Rails/app/views/password_reset_mailer/reset_email.text.erb
@@ -2,5 +2,5 @@ Someone has requested password reset for your account. Please visit this URL to 
 
 <%# Добавим токен в просто адресс, тк формат теста не поддерживает функционал ссылки %>
 
-<%= url_for edit_password_reset_url(user: {password_reset_token: @user.password_reset_token, email: @user.email}, locale: :en) %>
+<%= url_for edit_password_reset_url(user: {password_reset_token: @user.password_reset_token, email: @user.email}) %>
 <%# url_for - генерирует URL без ссылки, тоесть просто троку адреса %>
