--- a/web/Rails/app/views/admin/users/index.html.erb
+++ b/web/Rails/app/views/admin/users/index.html.erb
@@ -52,15 +52,10 @@
 <h2 class="mb-3">Upload users from XLSX</h2>
 
 <%= form_with url: admin_users_path do |f| %> <!-- POST 'admin/users' те экшен admin/users#create -->
-  <div class="mb-3 row">
-    <div class="col-sm-2 col-form-label">
-      <%= f.label :archive, 'Select archive' %>
-    </div>
-
-    <div class="col-sm-10">
-      <%= f.file_field :archive, class: 'form-control' %>
-      <!-- file_field - хэлпер генерирует поле для загрузки фаила -->
-    </div>
+  <div>
+    <%= f.label :archive, 'Select archive' %>
+    <%= f.file_field :archive, class: 'form-control' %>
+    <!-- file_field - хэлпер генерирует поле для загрузки фаила -->
   </div>
 
   <%= f.submit 'Upload!', class: 'btn btn-primary' %>
