--- a/web/Rails/app/views/admin/users/index.html.erb
+++ b/web/Rails/app/views/admin/users/index.html.erb
@@ -5,8 +5,10 @@
 
 <!-- ссылка/кнопка для работы с форматом zip. Загрузит для пользователя(админа) данные(XLSX) в формате архива(zip) -->
 <div class="btn-group mb-3">
-  <%= link_to 'Download zipped XLSX', admin_users_path(format: :zip), class: 'btn btn-secondary' %>
+  <%= link_to 'Download zipped XLSX', admin_users_path(format: :zip),
+    class: 'btn btn-secondary', data: {confirm: t('global.dialog.you_sure')} %>
   <!-- admin_users_path(format: :zip) - добавляем в хэлпер URL параметр format: :zip, это значит что к URL допишется .zip -->
+  <!-- data: {confirm: t('global.dialog.you_sure')} - подтверждение нажатия кнопки -->
 </div>
 
 <%= pagination @pagy %>
