--- a/web/Rails/app/assets/srtylesheets/_custom.scss
+++ b/web/Rails/app/assets/srtylesheets/_custom.scss
@@ -11,7 +11,7 @@
   width: 16px;
   height: 16px;
   display: inline-block;
-  background: url('../images/flags.png') no-repeat;
+  background: url('flags.png') no-repeat;
   overflow: hidden;
   text-indent: -9999px;
   text-align: left;
