--- a/web/Sinatra/views/pizzashop_index.erb
+++ b/web/Sinatra/views/pizzashop_index.erb
@@ -19,7 +19,7 @@
 
 <!--                                           Для layout -->
 
-<!-- Кнопка и поле для отправки данных о заказах(на уроке делали в шапке в виде layout). Существует много способов реализации такого функционала, но тут делаем самый простой вариант -->
+<!-- Кнопка и поле для отправки данных о заказах(на уроке делали в шапке в виде layout) -->
 <div>
 
 	<form action="/cart" method="POST">
