--- a/web/Rails/app/views/questions(turbo)/create.turbo_stream.erb
+++ b/web/Rails/app/views/questions(turbo)/create.turbo_stream.erb
@@ -3,4 +3,4 @@
 <!-- 'questions' - значение id турбофрэйм-тега в который мы добавляем вопрос -->
 <!-- render(@question) - то что мы тобавляем в турбофрэйм тег, а именно отрендеренный _quesion.html.erb с вопросом из @question -->
 
-<%= prepend_flash %>
+<%= prepend_flash %> <!-- turbo_stream.prepend 'flash', partial: 'shared/flash' - добавим вызов хэлпера для того чтобы отображать флэш сообщение в блоке лэйаута с соответсвующим айди при использовании турбо-фрэйма -->
