--- a/web/Rails/app/views/questions(turbo)/index.html.erb
+++ b/web/Rails/app/views/questions(turbo)/index.html.erb
@@ -15,8 +15,9 @@
 <% if policy(:question).new? %>
   <!-- При нажатии данной кнопки мы вставим контент со страницы по адресу new_question_path в тело тега turbo_frame_tag с тем же айди, что тут в data -->
   <%= link_to t('.new'), new_question_path, class: 'btn btn-primary btn-lg mb-3', data: { turbo_frame: dom_id(Question.new) } %>
-  <!-- data: { turbo_frame: dom_id(Question.new) }   - те в data прописываем какой турбо-фрэйм нужно будет обновить, тоесть куда нужно будет вгрузить данные формы для вопроса из questions(turbo)/_form.html.erb -->
-  <!-- dom_id(Question.new) - айди для того чтобы эта ссылка вставила контент в конкретный тег turbo_frame_tag с тем же айди, тут одинаковый айди для новой сущности при помощи Question.new -->
+  <!-- new_question_path - тоесть все так же обращаемся к экшену new, чтобы он вернул new.html.erb в котором рендерится паршал _form.html.erb с нужной нам формой -->
+  <!-- data: { turbo_frame: dom_id(Question.new) } - в data прописываем какой турбо-фрэйм-ткг нужно будет обновить, тоесть куда нужно будет вгрузить данные формы для вопроса из questions(turbo)/_form.html.erb -->
+  <!-- dom_id(Question.new) - айди для того чтобы эта ссылка вставила контент в конкретный тег turbo_frame_tag с тем же айди, тут создадим айди "new_question" при помощи Question.new -->
 
   <%= turbo_frame_tag Question.new %> <!-- тоесть в данном месте мы выведем турбо фрэйм-тег -->
   <!-- turbo_frame_tag - хэлпер для создания тега турбофрэйма -->
@@ -28,7 +29,7 @@
   <turbo-frame id="new_question"></turbo-frame>
   <!-- Турбофрэйм-тег после нажатия кнопки, в который вставился контент из турбофрэйма в паршале questions(turbo)/_form.html.erb, вставилось только то что в теге турбофрэйма там, без кода из new.html.erb -->
   <turbo-frame id="new_question" src="http://localhost:5000/en/questions/new" complete="">
-    <!-- src="http://localhost:5000/en/questions/new"  - адрес страницы с которой мы взяли форму. Тоесть данный турбофрэйм нашел на странице по этому адресу турбофрэйм с таким же айдишником и пожставил сюда контент из него -->
+    <!-- src="http://localhost:5000/en/questions/new"  - адрес страницы с которой мы взяли форму. Тоесть данный турбофрэйм нашел на странице по этому адресу турбофрэйм с таким же айдишником и подставил сюда контент из него -->
     <form action="/en/questions" accept-charset="UTF-8" method="post">
       <!-- ... поля формы ... -->
     </form>
