--- a/web/Rails/app/views/questions(turbo)/update.turbo_stream.erb
+++ b/web/Rails/app/views/questions(turbo)/update.turbo_stream.erb
@@ -1,5 +1,6 @@
 <%= turbo_stream.replace @question, render(@question) %>
 <!-- replace - метод турбострима который заменит существующий вопрос с индексом сгенерированным от вопроса @question переданного из экшена update -->
+<!-- @question - генерируем айди от текущего вопроса -->
 <!-- render(@question) - заменим соотв на обновленный вопрос -->
 
 <%= prepend_flash %>
