--- a/web/Rails/app/views/tags/_tag.html.erb
+++ b/web/Rails/app/views/tags/_tag.html.erb
@@ -3,3 +3,14 @@
   <small><%= tag.title %></small>
 <% end %>
 <!-- questions_path(tag_ids: tag) - хэлпер URL содержащий в адресе айдишник данного тега GET '/questions?tag_ids=1' -->
+
+
+
+<!--                         Вариант с Turbo(если эта ссылка находится в турбо-фрэйме) -->
+
+<%= link_to questions_path(tag_ids: tag),
+  class: 'badge rounded-pill bg-light text-dark d-inline-block px-2 pt-1 pb-2 me-1',
+  data: {turbo_frame: '_top'} do %>
+  <!-- data: {turbo_frame: '_top'} - добавим data-атрибут turbo_frame с суффиксом '_top', который передаст турбофрэйму(?), что обновлять будем всю страницу, а не только фрэйм -->
+  <small><%= tag.title %></small>
+<% end %>
