--- a/web/Rails/app/views/questions(turbo)/show.html.erb
+++ b/web/Rails/app/views/questions(turbo)/show.html.erb
@@ -4,14 +4,17 @@
 <article class="mb-3">
   <!-- уберем отдельную разметку для вопроса и добавим вместо не рендер _question.html.erb -->
   <%= render @question %>
-  <!-- так добавится и турбофрэйм тег, соотв контроллеры при нажатии кнопок редактирования и удаления будут отвечать на формат турбофрэйма, соотв на эту же страницу будет подгружаться форма -->
+  <!-- так добавится и турбофрэйм теги из _question.html.erb, соотв контроллеры при нажатии кнопок редактирования и удаления будут отвечать на формат турбофрэйма, соотв на эту же страницу будет подгружаться форма -->
 </article>
 
+<!-- Старый варик до пункта 10. "динамическими создание и удаление комментариев" -->
 <%= render 'comments/commentable', commentable: @question, comment: @comment, html_id: 'questionComments' %>
+<!-- Новый варик после пункта 10. "динамическими создание и удаление комментариев" -->
+<%= render 'comments/commentable', commentable: @question, comment: @comment %>
 
 <h2 class="my-3"><%= t '.write_answer' %></h2>
 
-<%= render 'answers/form' %>
+<%= render 'answers/form' %> <!-- теперь форма рендерится тут в турбофрэйме -->
 
 <h2 class="mt-5 mb-3"><%= t '.answers' %></h2>
 
