--- a/web/Rails/app/views/questions(turbo)/_form.html.erb
+++ b/web/Rails/app/views/questions(turbo)/_form.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag question do %>
-<!-- question - если это форма для нового вопроса то тут тоже будет Question.new, соответсвенно сгенерируется тот же самый айдишник "new_question" что и на кнопке и туброфрэйм-ткге в questions(turbo)/index.html.erb; а если форма для редактирования, тогда соотв используется конкретный вопрос со своим айди для генерации айди турбофрэйма -->
+<!-- question - если это форма для нового вопроса то тут тоже будет Question.new, соответсвенно сгенерируется тот же самый айдишник "new_question" что и на кнопке и туброфрэйм-тэге в questions(turbo)/index.html.erb; а если форма для редактирования, тогда соотв используется конкретный вопрос со своим айди для генерации айди турбофрэйма -->
 
   <%= form_with model: question do |f| %>
     <%= render 'shared/errors', object: question %>
