--- a/web/Rails/app/views/questions(turbo)/show.html.erb
+++ b/web/Rails/app/views/questions(turbo)/show.html.erb
@@ -2,7 +2,7 @@
 <% currently_at t('menu.questions') %>
 
 <article class="mb-3">
-  <!-- уберем отдельную разметку для вопроса и добавим вместо не рендер _question.html.erb -->
+  <!-- уберем отдельную разметку для вопроса и добавим вместо нее рендер _question.html.erb -->
   <%= render @question %>
   <!-- так добавится и турбофрэйм теги из _question.html.erb, соотв контроллеры при нажатии кнопок редактирования и удаления будут отвечать на формат турбофрэйма, соотв на эту же страницу будет подгружаться форма -->
 </article>
