--- a/web/Rails/app/views/comments(turbo)/_commentable.html.erb
+++ b/web/Rails/app/views/comments(turbo)/_commentable.html.erb
@@ -1,8 +1,9 @@
-<!-- is_current_comment - которая раньше использовалась для расхлопывания нужного коммента для которого выводили ошибки, это нам больше не нужно, тк страницу целиком больше перерисовывать не будем -->
+<!-- is_current_comment - которая раньше использовалась для расхлопывания нужного коммента и для вывода ошибкок только для конкретного коммента, это нам больше не нужно, тк страницу целиком больше перерисовывать не будем -->
 <% comment_builder = commentable.comments.build %> <!-- Соотв и это упростим убрав is_current_comment -->
 <% html_id = dom_id commentable, 'comments' %> <!-- Сгенерим тут html_id, который раньше передавали из _answer.html.erb -->
 <!-- 'comments' - добавим префикс к генерируемому айди тк тут в 2х местах используем commentable для генерации -->
 
+<!-- Кнопка создания коммента(она находится во фрэйме либо вопроса либо ответа) -->
 <%= link_to t('questions.show.comments'), "##{html_id}", class: 'btn btn-primary', data: {'bs-toggle': 'collapse'} %>
 
 <%= tag.div class: "collapse", id: html_id do %> <!-- Соотв и это упростим убрав проверку на is_current_comment -->
