--- a/web/Rails/app/views/questions(turbo)/_question.html.erb
+++ b/web/Rails/app/views/questions(turbo)/_question.html.erb
@@ -21,7 +21,7 @@
 
       <% if policy(question).edit? %>
         <%= link_to t('global.button.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
-        <!-- ?? Тут не меняем ссылку тк ссылка внутри турбофрэйма автоматически отправляет с запросом форрмат турбофрэйма ?? -->
+        <!-- ?? Тут не меняем ссылку тк ссылка внутри турбофрэйма автоматически отправляет с запросом форрмат турбофрэйма, и со страницы edit_question_path(question) возьмет турбофрэйм с айди турбофрэйма этого вопроса, тк запрос послан из него ?? -->
       <% end %>
 
       <% if policy(question).destroy? %>
