--- a/web/Rails/app/views/items/_form.html.erb
+++ b/web/Rails/app/views/items/_form.html.erb
@@ -1,8 +1,17 @@
 <%= form_with model: @item, data: {'turbo': false} do |f| %> <!-- data: {'turbo': false} - отключаем турбо если оно есть -->
   <%= f.hidden_field :lock_version %> <!-- добавим значение версии, получится поле: -->
     <input autocomplete="off" type="hidden" value="0" name="item[lock_version]" id="item_lock_version" />
-    <!-- value="0" - изначально значение 0 при обновлении станет 1, при след  обновлении 2 итд, тоесть у пользователя который 1м обновляет, запись обновляется и значение поля увеличивается на 1, а у другого пользователя который примерно одновременно зашел на страницу и соотв не перезагружал ее после обновления записи, значение все еще останется на 1 меньше актуального и соответсвенно обновить не получится и выдаст ошибку ActiveRecord::StaleObjectError, тк объект уже устарел -->
+    <!-- value="0" - изначально значение 0 при обновлении станет 1, при следующем обновлении 2 итд, тоесть у пользователя который 1м обновляет, запись обновляется и значение поля увеличивается на 1, а у другого пользователя который примерно одновременно зашел на страницу и соотв не перезагружал ее после обновления записи, значение все еще останется на 1 меньше -->
+    <!-- У пользователя не получится обновить запись, если он в консоли разработчика поменяет значение версии в скрытом поле, кроме случаев если он введет актуальное значение версии, тоесть угадает сколько раз ее сейчас изменили другие -->
 
+  <%= f.text_field :title, placeholder: 'Title' %>
+  <%= f.submit "Update" %>
+<% end %>
+
+
+
+<!-- Для Item2 такая же фрма но без скрытого поля -->
+<%= form_with model: @item, data: {'turbo': false} do |f| %>
   <%= f.text_field :title, placeholder: 'Title' %>
   <%= f.submit "Update" %>
 <% end %>
