--- a/web/Rails/app/views/home/stata.html.erb
+++ b/web/Rails/app/views/home/stata.html.erb
@@ -13,7 +13,7 @@
   <option value="result=games&">Игры</option>
   <option value="result=wins&">Победы</option>
   <option value="result=loses&">Поражения</option>
-  <option value="result=draws">Ничьи</option>
+  <option value="result=draws&">Ничьи</option>
 </select>
 
 <!-- Ссылка для отправки данных в экшен -->
