--- a/web/Rails/app/views/articles/create.html.erb
+++ b/web/Rails/app/views/articles/create.html.erb
@@ -6,7 +6,7 @@
 <!-- Обычно так не делают, тк это хардкод, если мы чтото поменяем в маршрутах, то ссылка останется старой -->
 <a href="/articles">Show all articles</a>
 
-<!-- Правильный синтаксис ссылки для Рэилс: Получится та же ссылка что и выше, но когда мы поменяем маршруты в routes.rb то и путь, находящийся в переменной articles_path, в ссыдке изменится -->
+<!-- Правильный синтаксис ссылки для Рэилс: Получится та же ссылка что и выше, но когда мы поменяем маршруты в routes.rb то и путь, находящийся в переменной articles_path, в ссылке изменится -->
 <%= link_to "Show all articles", articles_path, class: 'btn btn-sm btn-outline-danger' %>
 <!-- articles_path - относительный URL на корневую директорию контроллера articles те '/articles' -->
 <!-- "Show all articles" - value ссылки -->
